@@ -12,8 +12,6 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-using Castle.MicroKernel.Util;
-
 namespace Castle.MicroKernel.SubSystems.Configuration
 {
 	using System;
@@ -36,13 +34,23 @@ namespace Castle.MicroKernel.SubSystems.Configuration
 	{
 		private readonly IDictionary facilities = new HybridDictionary();
 		private readonly IDictionary components = new HybridDictionary();
+		private readonly IDictionary bootstrapcomponents = new HybridDictionary();
 		private readonly ArrayList facilitiesList = new ArrayList();
 		private readonly ArrayList componentsList = new ArrayList();
+		private readonly ArrayList bootstrapComponentsList = new ArrayList();
 
+		/// <summary>
+		/// Initializes a new instance of the <see cref="DefaultConfigurationStore"/> class.
+		/// </summary>
 		public DefaultConfigurationStore()
 		{
 		}
 
+		/// <summary>
+		/// Associates a configuration node with a facility key
+		/// </summary>
+		/// <param name="key">item key</param>
+		/// <param name="config">Configuration node</param>
 		[MethodImpl(MethodImplOptions.Synchronized)]
 		public void AddFacilityConfiguration(String key, IConfiguration config)
 		{
@@ -51,6 +59,11 @@ namespace Castle.MicroKernel.SubSystems.Configuration
 			facilities[key] = config;
 		}
 
+		/// <summary>
+		/// Associates a configuration node with a component key
+		/// </summary>
+		/// <param name="key">item key</param>
+		/// <param name="config">Configuration node</param>
 		[MethodImpl(MethodImplOptions.Synchronized)]
 		public void AddComponentConfiguration(String key, IConfiguration config)
 		{
@@ -59,24 +72,78 @@ namespace Castle.MicroKernel.SubSystems.Configuration
 			components[key] = config;
 		}
 
+		/// <summary>
+		/// Associates a configuration node with a bootstrap component key
+		/// </summary>
+		[MethodImpl(MethodImplOptions.Synchronized)]
+		public void AddBootstrapComponentConfiguration(string key, IConfiguration config)
+		{
+			throw new NotImplementedException();
+		}
+
+		/// <summary>
+		/// Returns the configuration node associated with
+		/// the specified facility key. Should return null
+		/// if no association exists.
+		/// </summary>
+		/// <param name="key">item key</param>
+		/// <returns></returns>
 		[MethodImpl(MethodImplOptions.Synchronized)]
 		public IConfiguration GetFacilityConfiguration(String key)
 		{
 			return facilities[key] as IConfiguration;
 		}
 
+		/// <summary>
+		/// Returns the configuration node associated with
+		/// the specified component key. Should return null
+		/// if no association exists.
+		/// </summary>
+		/// <param name="key">item key</param>
+		/// <returns></returns>
 		[MethodImpl(MethodImplOptions.Synchronized)]
 		public IConfiguration GetComponentConfiguration(String key)
 		{
 		    return components[key] as IConfiguration;
 		}
 
+		/// <summary>
+		/// Returns the configuration node associated with 
+		/// the specified component key. Should return null
+		/// if no association exists.
+		/// </summary>
+		/// <param name="key"></param>
+		/// <returns></returns>
+		[MethodImpl(MethodImplOptions.Synchronized)]
+		public IConfiguration GetBootstrapComponentConfiguration(string key)
+		{
+			return bootstrapcomponents[key] as IConfiguration;
+		}
+
+		/// <summary>
+		/// Returns all configuration nodes for facilities
+		/// </summary>
+		/// <returns></returns>
 		[MethodImpl(MethodImplOptions.Synchronized)]
 		public IConfiguration[] GetFacilities()
 		{
 			return (IConfiguration[]) facilitiesList.ToArray(typeof(IConfiguration));
 		}
 
+		/// <summary>
+		/// Returns all configuration nodes for bootstrap components
+		/// </summary>
+		/// <returns></returns>
+		[MethodImpl(MethodImplOptions.Synchronized)]
+		public IConfiguration[] GetBootstrapComponents()
+		{
+			return (IConfiguration[]) bootstrapComponentsList.ToArray(typeof(IConfiguration));
+		}
+
+		/// <summary>
+		/// Returns all configuration nodes for components
+		/// </summary>
+		/// <returns></returns>
 		[MethodImpl(MethodImplOptions.Synchronized)]
 		public IConfiguration[] GetComponents()
 		{
