@@ -127,6 +127,10 @@ namespace Castle.Windsor.Configuration.Interpreters
 			{
 				DeserializeComponents(node.ChildNodes, store);
 			}
+			else if (BootstrapNodeName.Equals(node.Name))
+			{
+				DeserializeBootstrapComponents(node.ChildNodes, store);
+			}
 			else
 			{
 				string message = String.Format("DeserializeElement cannot process element {0}", node.Name);
@@ -173,6 +177,19 @@ namespace Castle.Windsor.Configuration.Interpreters
 			}
 		}
 
+		private void DeserializeBootstrapComponents(XmlNodeList nodes, IConfigurationStore store)
+		{
+			foreach(XmlNode node in nodes)
+			{
+				if (node.NodeType == XmlNodeType.Element)
+				{
+					AssertNodeName(node, ComponentNodeName);
+
+					DeserializeBootstrapComponent(node, store);
+				}
+			}
+		}
+
 		private void DeserializeComponent(XmlNode node, IConfigurationStore store)
 		{
 			String id = GetRequiredAttributeValue(node, "id");
@@ -182,9 +199,18 @@ namespace Castle.Windsor.Configuration.Interpreters
 			AddComponentConfig(id, config, store);
 		}
 
+		private void DeserializeBootstrapComponent(XmlNode node, IConfigurationStore store)
+		{
+			String id = GetRequiredAttributeValue(node, "id");
+
+			IConfiguration config = GetDeserializedNode(node);
+
+			AddBootstrapComponentConfig(id, config, store);
+		}
+
 		private IConfiguration GetDeserializedNode(XmlNode node)
 		{
-			MutableConfiguration config = null;
+			MutableConfiguration config;
 			ConfigurationCollection configChilds = new ConfigurationCollection();
 
 			StringBuilder configValue = new StringBuilder();
@@ -258,21 +284,6 @@ namespace Castle.Windsor.Configuration.Interpreters
 		private bool IsTextNode(XmlNode node)
 		{
 			return node.NodeType == XmlNodeType.Text || node.NodeType == XmlNodeType.CDATA;
-		}
-
-		private void AssertRequiredAttribute(IConfiguration config, string attrName, string parentName)
-		{
-			String content = config.Attributes[attrName];
-
-			if (content == null || content.Trim() == String.Empty)
-			{
-				string message = String.Format("{0} expects {1} attribute", parentName, attrName);
-#if DOTNET2
-				throw new ConfigurationErrorsException(message);
-#else
-				throw new ConfigurationException(message);
-#endif
-			}
 		}
 
 		private void AssertNodeName(XmlNode node, string expectedName)
